--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -26,10 +26,11 @@
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>{{pokemon.name}}</mat-card-title>
       </mat-card-header>
-      <img mat-card-image
-        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{getGeneration(id)}}.png"
+      <img mat-card-image src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
         alt="Photo of {{pokemon.name}}">
-      <!--getGeneration(id) falsch???-->
+      <!--src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{getGeneration(id)}}.png"
+      getGeneration(id) falsch 
+      getGeneration falsch, so wird nur die Generation und nicht das Pokemon geholt-->
     </mat-card>
   </div>
 </div>
