mit Flex rumgespielt

--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -19,8 +19,8 @@
     </mat-menu>
   </mat-toolbar>
 </p>
-<div fxLayout="row wrap" fxLayoutGap="16px">
-  <div fxFlex="20%" *ngFor="let pokemon of pokemon">
+<div class="container" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="2%">
+  <div fxFlex="16%" *ngFor="let pokemon of pokemon">
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
