3 in einer Reihe

--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -31,7 +31,7 @@
       <br>
       <mat-card-content>
         <p>
-          Photo of a {{pokemon.name}}
+          {{pokemon.name}}
         </p>
       </mat-card-content>
       <mat-card-actions>
