--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -32,7 +32,7 @@
       <br>
       <mat-card-content>
         <p>
-          Type: {{pokemon.pokeTyp}}
+          Type: {{pokemon.pokemonTypeInUppercase}}
         </p>
       </mat-card-content>
       <mat-card-actions>
