--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -22,7 +22,9 @@
 
   <div class="cardContainer">
 
-    <mat-card class="example-card" *ngFor="let pokemon of pokemon">
+    <mat-card class="example-card" *ngFor="let pokemon of pokemon" (click)="openDialog()">
+
+
 
       <mat-card-header class="cardHeader">
         <mat-card-title class="cardTitel">{{pokemon.name}}</mat-card-title>
@@ -32,7 +34,7 @@
       <br>
       <mat-card-content>
         <p>
-          Type: {{pokemon.pokemonTypeInUppercase}}
+          Type: {{getTypes(pokemon)}}
         </p>
       </mat-card-content>
       <mat-card-actions>
