--- a/pokedex-app/src/app/popup/popup.component.html
+++ b/pokedex-app/src/app/popup/popup.component.html
@@ -1,1 +1,13 @@
-<p>popup works!</p>
+<h1 mat-dialog-title>Stärke gegen Typen</h1>
+
+<!--da kommt die Graphik rein-->
+<div mat-dialog-content>
+    <p>What's your favorite animal?</p>
+
+</div>
+
+
+
+<div mat-dialog-actions>
+    <button mat-button [mat-dialog-close] cdkFocusInitial>Ok</button>
+</div>
