--- a/pokedex-app/src/app/app.component.html
+++ b/pokedex-app/src/app/app.component.html
@@ -20,6 +20,13 @@
   </mat-toolbar>
 
 
+  <!--Apex Chart Start:-->
+  <div style="text-align:center">
+    <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
+      [title]="chartOptions.title"></apx-chart>
+  </div>
+  <!--Apex Chart Ende:-->
+
   <div class="cardContainer">
 
     <mat-card class="example-card" *ngFor="let pokemon of pokemon" (click)="openDialog()">
